# 77MCP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/mcp_1c77/: __main__.py  bracket_parser.py  metadata.py  models.py  ole_reader.py  server.py  tools.py  web.py
src/mcp_1c77/static/: index.html
tests/: test_bracket_parser.py  test_metadata.py  test_ole_reader.py  test_tools_modules.py
